test/ui/tests/fail/class-async-context-ref.stderr
error[E0412]: cannot find type `FunctionContext` in this scope
 --> tests/fail/class-async-context-ref.rs:6:32
  |
6 |     fn method(&self, _cx: &mut FunctionContext) {}
  |                                ^^^^^^^^^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use neon::prelude::FunctionContext;
  |

error[E0277]: the trait bound `Example: Default` is not satisfied
 --> tests/fail/class-async-context-ref.rs:3:1
  |
3 | #[neon::class]
  | ^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Example`
  |
  = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Example` with `#[derive(Default)]`
  |
1 + #[derive(Default)]
2 | struct Example;
  |

error[E0277]: `()` is not a future
 --> tests/fail/class-async-context-ref.rs:3:1
  |
 3 | #[neon::class]
   | ^^^^^^^^^^^^^^ `()` is not a future
   |
   = help: the trait `Future` is not implemented for `()`
note: required by a bound in `neon::macro_internal::spawn`
  --> $WORKSPACE/crates/neon/src/macro_internal/futures.rs
   |
 9 | pub fn spawn<'cx, F, S>(cx: &mut Cx<'cx>, fut: F, settle: S) -> JsResult<'cx, JsValue>
   |        ----- required by a bound in this function
   | where
   |     F: Future + Send + 'static,
   |        ^^^^^^ required by this bound in `spawn`
   = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
 --> tests/fail/class-async-context-ref.rs:3:1
  |
3 | #[neon::class]
  | ^^^^^^^^^^^^^^ cannot infer type
  |
  = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)
